package OnTap.decorator.bai1;

public class BasicPhoto implements IPhoto{
    @Override
    public void show() {
        System.out.println("Hiển thị ảnh: ");
    }
}
